Working on the room

--- a/room.html
+++ b/room.html
@@ -1,16 +1,83 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
+	<meta charset="UTF-8">
 	<title>On System</title>
+	<meta name="description" content="Free Web tutorials">
+	<meta name="keywords" content="HTML, CSS, JavaScript">
+	<meta name="author" content="John Doe">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" href="favicon.ico">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-	<!-- <script src="https://kit.fontawesome.com/89f5c84de8.js" crossorigin="anonymous"></script> -->
 </head>
 <body>
-	<footer>
-		
-	</footer>
+	<div class="wrapper">
+		<div class="middle">
+			<header>
+				<div class="icon-badge right">
+					<img src="assets/image/logo-white.png">
+				</div>
+				<div class="room-details right">
+					<h1 class="room-name inline-text">کلاس درس آموزش معادلات دیفرانسیل - جلسه 44</h1>
+					<h2 class="room-presenter inline-text">دانشگاه کاشان</h2>
+				</div>
+			</header>
+			<div class="clear"></div>
+			<main>
+				<aside class="right">
+					<div class="content-container">
+						<div class="tab">
+							<ul class="tab-header">
+								<li class="active">
+									<div class="tab-item">
+										مشارکت کنندگان
+										(<span>4</span>)
+									</div>
+								</li>
+								<li>
+									<div class="tab-item">
+										پیام ها
+									</div>
+								</li>
+							</ul>
+							<ul class="tab-content">
+								<li class="active">
+									aside1
+								</li>
+								<li>
+									aside2
+								</li>
+							</ul>
+						</div>
+						<!-- tab -->
+					</div>
+					<!-- content-container -->
+				</aside>
+				<figure class="left">
+					<div class="content-container">
+						figure
+					</div>
+				</figure>
+			</main>
+		</div>
+		<div class="bottom">
+			<footer>
+				<div class="left">
+					Left
+				</div>
+				<div class="right">
+					Right
+				</div>
+				<div class="center">
+					<button class="">
+						<img src="assets/image/mic_off_black_24dp.svg">
+						<img src="assets/image/mic_black_24dp.svg">
+						<img src="assets/image/pan_tool_black_24dp.svg">
+					</button>
+				</div>
+			</footer>
+		</div>
+	</div>
 	<script type="text/javascript" src="assets/js/script.js"></script>
 </body>
 </html>
