Start working on chat list

--- a/room.html
+++ b/room.html
@@ -28,20 +28,20 @@
 					<div class="content-container">
 						<div class="tab">
 							<ul class="tab-header">
-								<li class="active" data-tab-index="1">
+								<li class="" data-tab-index="1">
 									<div class="tab-item">
 										مشارکت کنندگان
 										(<span>4</span>)
 									</div>
 								</li>
-								<li data-tab-index="2">
+								<li class="active" data-tab-index="2">
 									<div class="tab-item">
 										پیام ها
 									</div>
 								</li>
 							</ul>
 							<ul class="tab-content">
-								<li class="tab-content-item active" data-tab-index="1">
+								<li class="tab-content-item" data-tab-index="1">
 									<ul class="user-list">
 										<li>
 											<img class="avatar right" src="https://i.pravatar.cc/70?img=1">
@@ -504,8 +504,35 @@
 										</li>
 									</ul>
 								</li>
-								<li class="tab-content-item" data-tab-index="2">
-									aside2
+								<li class="tab-content-item active" data-tab-index="2">
+									<!-- aside2 -->
+									<ul class="chat-list">
+										<li class="chat-list-item">
+											<img class="avatar right" src="https://i.pravatar.cc/90?img=50">
+											<label class="name">Jake Middlestone</label>
+											<span class="time">10:24</span>
+											<ul class="chat-list-item-messages">
+												<li>Hey guys! :)</li>
+												<li>Hey Everyone ready for the meeting?</li>
+											</ul>
+										</li>
+										<li class="chat-list-item">
+											<img class="avatar right" src="https://i.pravatar.cc/90?img=52">
+											<label class="name">Nicholas Strattenberg Middlestone</label>
+											<span class="time">10:24</span>
+											<ul class="chat-list-item-messages">
+												<li>Yeah man, let's do this!</li>
+											</ul>
+										</li>
+										<li class="chat-list-item">
+											<img class="avatar right" src="https://i.pravatar.cc/90?img=54">
+											<label class="name">Melissa Miles</label>
+											<span class="time">10:24</span>
+											<ul class="chat-list-item-messages">
+												<li>Hi everyone! I'm ready too! :)</li>
+											</ul>
+										</li>
+									</ul>
 								</li>
 							</ul>
 						</div>
