tring to solve problem of chat msgs

--- a/room.html
+++ b/room.html
@@ -509,27 +509,30 @@
 									<ul class="chat-list">
 										<li class="chat-list-item">
 											<img class="avatar right" src="https://i.pravatar.cc/90?img=50">
-											<label class="name">Jake Middlestone</label>
-											<span class="time">10:24</span>
+											<label class="name right">Jake Middlestone</label>
+											<span class="time left">10:24</span>
+											<div class="clear"></div>
 											<ul class="chat-list-item-messages">
-												<li>Hey guys! :)</li>
-												<li>Hey Everyone ready for the meeting?</li>
+												<li>سلام بچه ها! :)</li>
+												<li>خوب هستید؟ چه خبرا</li>
 											</ul>
 										</li>
 										<li class="chat-list-item">
 											<img class="avatar right" src="https://i.pravatar.cc/90?img=52">
-											<label class="name">Nicholas Strattenberg Middlestone</label>
-											<span class="time">10:24</span>
+											<label class="name right">Nicholas Strattenberg Middlestone</label>
+											<span class="time left">10:24</span>
+											<div class="clear"></div>
 											<ul class="chat-list-item-messages">
-												<li>Yeah man, let's do this!</li>
+												<li>مرسی قربانت. اوضاع خوبه!</li>
 											</ul>
 										</li>
 										<li class="chat-list-item">
 											<img class="avatar right" src="https://i.pravatar.cc/90?img=54">
-											<label class="name">Melissa Miles</label>
-											<span class="time">10:24</span>
+											<label class="name right">Melissa Miles</label>
+											<span class="time left">10:24</span>
+											<div class="clear"></div>
 											<ul class="chat-list-item-messages">
-												<li>Hi everyone! I'm ready too! :)</li>
+												<li>پس کی مراسم شروع میشه؟</li>
 											</ul>
 										</li>
 									</ul>
