Fix the problem of figure/aside

--- a/room.html
+++ b/room.html
@@ -620,6 +620,10 @@
 											</ul>
 										</li>
 									</ul>
+									<div class="submit-message">
+										<textarea oninput="this.value = this.value.replace(/\n/g,'')" class="submit-message-input right" placeholder="پیام خود را بنویسید..."></textarea>
+										<button class="submit-message-button left">ارسال</button>
+									</div>
 								</li>
 							</ul>
 						</div>
@@ -636,10 +640,10 @@
 		<div class="bottom">
 			<footer>
 				<div class="left">
-					Left
+					<!-- Left -->
 				</div>
 				<div class="right">
-					Right
+					<!-- Right -->
 				</div>
 				<div class="center">
 					<button class="">
