Start working on video figure

--- a/room.html
+++ b/room.html
@@ -47,6 +47,7 @@
 											<img class="avatar right" src="https://i.pravatar.cc/70?img=1">
 											<span class="right">
 												مکس بیس
+					
 											</span>
 											<div class="user-action">
 												<svg class="" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#000000"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"/></svg>
@@ -508,6 +509,15 @@
 									<!-- aside2 -->
 									<ul class="chat-list">
 										<li class="chat-list-item">
+											<img class="avatar right" src="image/avatar.jpg">
+											<label class="name right">آن سیستم</label>
+											<span class="time left">10:24</span>
+											<div class="clear"></div>
+											<ul class="chat-list-item-messages">
+												<li>سلام دوست عزیز، به جلسه خوش آمدید.</li>
+											</ul>
+										</li>
+										<li class="chat-list-item">
 											<img class="avatar right" src="https://i.pravatar.cc/90?img=50">
 											<label class="name right">حمید رضوی</label>
 											<span class="time left">10:24</span>
@@ -633,6 +643,23 @@
 				</aside>
 				<figure class="left">
 					<div class="content-container">
+						<ul class="videos">
+							<li class="videos-item">
+								<div class="videos-item-back">
+									<video poster="image/New Project.jpg"></video>
+								</div>
+								<div class="videos-item-front">
+									<div class="videos-item-namebox right">
+										<div class="right status-icon status-icon-online"></div>
+										<label class="right name">علی احمدی</label>
+									</div>
+									<div class="videos-item-controllers left">
+										<svg class="user-icons-microphone mute active" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#000000"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 14c1.66 0 2.99-1.34 2.99-3L15 5c0-1.66-1.34-3-3-3S9 3.34 9 5v6c0 1.66 1.34 3 3 3zm5.3-3c0 3-2.54 5.1-5.3 5.1S6.7 14 6.7 11H5c0 3.41 2.72 6.23 6 6.72V21h2v-3.28c3.28-.48 6-3.3 6-6.72h-1.7z"/></svg>
+										<svg class="user-icons-microphone unmute" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#000000"><path d="M0 0h24v24H0zm0 0h24v24H0z" fill="none"/><path d="M19 11h-1.7c0 .74-.16 1.43-.43 2.05l1.23 1.23c.56-.98.9-2.09.9-3.28zm-4.02.17c0-.06.02-.11.02-.17V5c0-1.66-1.34-3-3-3S9 3.34 9 5v.18l5.98 5.99zM4.27 3L3 4.27l6.01 6.01V11c0 1.66 1.33 3 2.99 3 .22 0 .44-.03.65-.08l1.66 1.66c-.71.33-1.5.52-2.31.52-2.76 0-5.3-2.1-5.3-5.1H5c0 3.41 2.72 6.23 6 6.72V21h2v-3.28c.91-.13 1.77-.45 2.54-.9L19.73 21 21 19.73 4.27 3z"/></svg>
+									</div>
+								</div>
+							</li>
+						</ul>
 					</div>
 				</figure>
 			</main>
