--- a/room.html
+++ b/room.html
@@ -711,18 +711,33 @@
 		</div>
 		<div class="bottom">
 			<footer>
+				dfgdfgdfg
 				<div class="left">
 					<!-- Left -->
-				</div>
-				<div class="right">
+				<!-- </div> -->
+				<!-- <div class="right"> -->
 					<!-- Right -->
-				</div>
-				<div class="center">
+				<!-- </div> -->
+				<!-- <div class="center"> -->
+					<div class="control-button control-button-microphone">
+						<svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" height="24px" viewBox="0 0 24 24" width="24px" fill="#000000"><g><rect fill="none" height="24" width="24"/><rect fill="none" height="24" width="24"/><rect fill="none" height="24" width="24"/></g><g><g/><g><path d="M12,14c1.66,0,3-1.34,3-3V5c0-1.66-1.34-3-3-3S9,3.34,9,5v6C9,12.66,10.34,14,12,14z"/><path d="M17,11c0,2.76-2.24,5-5,5s-5-2.24-5-5H5c0,3.53,2.61,6.43,6,6.92V21h2v-3.08c3.39-0.49,6-3.39,6-6.92H17z"/></g></g></svg>
+					</div>
+					<div class="control-button control-button-webcam">
+						<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#000000"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M15 8v8H5V8h10m1-2H4c-.55 0-1 .45-1 1v10c0 .55.45 1 1 1h12c.55 0 1-.45 1-1v-3.5l4 4v-11l-4 4V7c0-.55-.45-1-1-1z"/></svg>
+					</div>
+					<div class="control-button control-button-sharescreen">
+						<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#000000"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M21 2H3c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h7v2H8v2h8v-2h-2v-2h7c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm0 14H3V4h18v12z"/></svg>
+					</div>
+					<div class="control-button control-button-record">
+						<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#000000"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"/><circle cx="12" cy="12" r="5"/></svg>
+					</div>
+					<!--
 					<button class="">
 						<img src="assets/image/mic_off_black_24dp.svg">
 						<img src="assets/image/mic_black_24dp.svg">
 						<img src="assets/image/pan_tool_black_24dp.svg">
 					</button>
+					-->
 				</div>
 			</footer>
 		</div>
