Working on controll btns

--- a/room.html
+++ b/room.html
@@ -15,7 +15,7 @@
 		<div class="middle">
 			<header>
 				<div class="icon-badge right">
-					<img src="assets/image/logo-white.png">
+					<img class="room-logo" src="assets/image/logo-white.png">
 				</div>
 				<div class="room-details right">
 					<h1 class="room-name inline-text">کلاس درس آموزش معادلات دیفرانسیل - جلسه 44</h1>
