--- a/room.html
+++ b/room.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>On System</title>
-	<meta name="description" content="Free Web tutorials">
+	<meta name="description" content="On System">
 	<meta name="keywords" content="HTML, CSS, JavaScript">
-	<meta name="author" content="John Doe">
+	<meta name="author" content="Max Base">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" href="favicon.ico">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
