remove the input text when you pres submit btn

--- a/room.html
+++ b/room.html
@@ -643,6 +643,9 @@
 				</aside>
 				<figure class="left">
 					<div class="content-container">
+						<ul class="microphones">
+							
+						</ul>
 						<ul class="videos">
 							<li class="videos-item videos-item-wide hide">
 								<div class="videos-item-back">
