Add feature to detect enter key in input chat

--- a/room.html
+++ b/room.html
@@ -631,7 +631,7 @@
 										</li>
 									</ul>
 									<div class="submit-message">
-										<textarea oninput="this.value = this.value.replace(/\n/g,'')" class="submit-message-input right" placeholder="پیام خود را بنویسید..."></textarea>
+										<textarea class="submit-message-input right" placeholder="پیام خود را بنویسید..."></textarea>
 										<button class="submit-message-button left">ارسال</button>
 									</div>
 								</li>
