Change color of chat messages

--- a/room.html
+++ b/room.html
@@ -29,7 +29,7 @@
 						<div class="tab">
 							<ul class="tab-header">
 								<li class="" data-tab-index="1">
-									<div class="tab-item">
+									<div class="tab-item tab-item-users">
 										مشارکت کنندگان
 										(<span>4</span>)
 									</div>
