Change webcam demo img

--- a/room.html
+++ b/room.html
@@ -95,7 +95,7 @@
 						<ul class="videos">
 							<li class="videos-item videos-item-wide hide">
 								<div class="videos-item-back">
-									<video poster="image/New Project.jpg"></video>
+									<video poster="image/webcam-demo.jpg"></video>
 								</div>
 								<div class="videos-item-front">
 									<div class="videos-item-namebox right">
@@ -110,7 +110,7 @@
 							</li>
 							<li class="videos-item videos-item-normal">
 								<div class="videos-item-back">
-									<video poster="image/New Project.jpg"></video>
+									<video poster="image/webcam-demo.jpg"></video>
 								</div>
 								<div class="videos-item-front">
 									<div class="videos-item-namebox right">
@@ -125,7 +125,7 @@
 							</li>
 							<li class="videos-item videos-item-normal">
 								<div class="videos-item-back">
-									<video poster="image/New Project.jpg"></video>
+									<video poster="image/webcam-demo.jpg"></video>
 								</div>
 								<div class="videos-item-front">
 									<div class="videos-item-namebox right">
@@ -140,7 +140,7 @@
 							</li>
 							<li class="videos-item videos-item-normal">
 								<div class="videos-item-back">
-									<video poster="image/New Project.jpg"></video>
+									<video poster="image/webcam-demo.jpg"></video>
 								</div>
 								<div class="videos-item-front">
 									<div class="videos-item-namebox right">
