Adding audio files

--- a/room.html
+++ b/room.html
@@ -185,6 +185,12 @@
 			</div>
 		</div>
 	</div>
+	<audio controls class="d-none" src="ring.mp3" id="sendMessageAudio">
+	    <source src="assets/audio/ring.mp3" type="audio/mpeg">
+	    <source src="assets/audio/ring.ogg" type="application/ogg; codecs=vorbis">
+	    <source src="assets/audio/ring.wav" type="audio/vnd.wave">
+	    <source src="assets/audio/ring.opus" type="audio/ogg; codecs=opus">
+	</audio>
 	<script type="text/javascript" src="assets/js/script.js"></script>
 </body>
 </html>
