hidden the audio player

--- a/room.html
+++ b/room.html
@@ -185,7 +185,7 @@
 			</div>
 		</div>
 	</div>
-	<audio controls class="d-none" src="ring.mp3" id="sendMessageAudio">
+	<audio controls class="d-none" src="ring.mp3" id="sendMessageAudio" style="display:none;">
 	    <source src="assets/audio/ring.mp3" type="audio/mpeg">
 	    <source src="assets/audio/ring.ogg" type="application/ogg; codecs=vorbis">
 	    <source src="assets/audio/ring.wav" type="audio/vnd.wave">
